[gd_scene load_steps=4 format=3 uid="uid://b4csxpsd7ukr6"]

[ext_resource type="Script" path="res://Scripts/InventorySystem/InventoryUI.gd" id="1_5wtk1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwmtx"]
bg_color = Color(0, 0, 0, 0.576471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ris0j"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_5wtk1")
metadata/_edit_use_anchors_ = true

[node name="InventoryUIContainer" type="Control" parent="."]
custom_minimum_size = Vector2(800, 130)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="Panel" type="Panel" parent="InventoryUIContainer"]
custom_minimum_size = Vector2(800, 130)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0572917
anchor_right = 0.942708
anchor_bottom = 1.0
offset_left = -0.000366211
offset_right = 0.000366211
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_qwmtx")
metadata/_edit_use_anchors_ = true

[node name="InventoryItemsCarousel" type="HBoxContainer" parent="InventoryUIContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LeftPanel" type="Panel" parent="InventoryUIContainer"]
custom_minimum_size = Vector2(150, 130)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.078125
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ris0j")
metadata/_edit_use_anchors_ = true

[node name="LeftArrow" type="TextureButton" parent="InventoryUIContainer/LeftPanel"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0384615
anchor_right = 1.0
anchor_bottom = 0.961538
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 0
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="RightPanel" type="Panel" parent="InventoryUIContainer"]
custom_minimum_size = Vector2(150, 130)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.921875
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ris0j")
metadata/_edit_use_anchors_ = true

[node name="RightArrow" type="TextureButton" parent="InventoryUIContainer/RightPanel"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0384615
anchor_right = 1.0
anchor_bottom = 0.961538
grow_horizontal = 0
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="InventoryUIContainer/LeftPanel/LeftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="InventoryUIContainer/RightPanel/RightArrow" to="." method="_on_right_arrow_pressed"]
